RepairOrder Complaint controller